--- a/donations.html
+++ b/donations.html
@@ -38,7 +38,7 @@
         </div>
 
         <center>
-            <h2 class="cont-head">END POVERTY IN ALL ITS FORMS EVERYWHERE.</h2>
+            <h2 class="cont-head2">END POVERTY IN ALL ITS FORMS EVERYWHERE.</h2>
             <!-- <div class="para-cont"> -->
                 <p class="para01">Globally, more than 800 million people are still living on less than $1.25 a day; many lack access to adequate food, clean drinking water and sanitation. Rapid economic growth in countries like China and India has lifted millions out of poverty, but progress has been uneven. Women are disproportionately affected; they are more likely to live in poverty due to unequal access to paid work, education and property.</p>
             <!-- </div> -->
