--- a/contribution.html
+++ b/contribution.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-
+    <title>Contribution</title>
       <link rel="icon" href="images/icon.png" type="image/gif" size="16x16">
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="slideshow.css">
