Add Title and finalize contribution

--- a/contribution.html
+++ b/contribution.html
@@ -10,11 +10,9 @@
       <link rel="stylesheet" href="footer.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <style>
+ <title>Contribution.</title>
 
 
-
-</style>
 </head>
 
 <body>
@@ -323,7 +321,7 @@
                                <p class="crd1-p">Concern Worldwide is a non-profit humanitarian organization based in the United Kingdom. 
              It supports the world's poorest people and intervenes in the world's poorest countries. 
              Its staff consists of 3,000 specialists from 50 countries who work with 25 million poor people each year.</p>
-             <p>Concern Worldwide reaches out to and assists the most vulnerable communities in the world, 
+             <p class="crd1-p">Concern Worldwide reaches out to and assists the most vulnerable communities in the world, 
              including those affected by conflict, natural disasters, climate change, flooding, and extreme hunger. 
              In 25 countries, the organization executes a variety of projects aimed at addressing specific causes of severe poverty. 
              It is divided into six sections: livelihoods, health and nutrition, education, emergencies, gender equality, and innovation.</p>
@@ -340,10 +338,10 @@
                               <p class="crd1-p">Global Citizen is a non-profit organization that works to alleviate severe poverty around the world. New York is the organization's headquarters, 
              with offices in Canada, Australia, South Africa, Germany, and the United Kingdom. 
              It is a grassroots movement with the goal of eradicating extreme poverty by 2030.</p>
-             <p>The Global Citizen platform gives people the skills and knowledge they need to understand the root causes of severe poverty and take action to address them.
+             <p class="crd1-p">The Global Citizen platform gives people the skills and knowledge they need to understand the root causes of severe poverty and take action to address them.
              Millions of people all across the world have already taken over 24 million actions to pressure world leaders to end severe poverty by 2030. 
              As a result, leaders have made promises and policy initiatives worth more than 48 billion dollars.</p>
-             <p>They almost taken 505,382 total action.</p>
+             <p class="crd1-p">They almost taken 505,382 total action.</p>
              </div>
             </div>
              
@@ -356,7 +354,7 @@
                               <h4 class="card1-title">Innovations for Poverty Action.</h4> 
                               <p class="crd1-p">Innovations for Poverty Action (IPA) is a non-profit organization that conducts research and advocates for effective solutions to global poverty issues. 
              It brings together scholars and decision-makers to assess and implement these solutions in order to better the lives of the underprivileged.</p>
-             <p>Since its founding in 2002, IPA has produced and tested over 550 solutions to poverty-related concerns. 
+             <p class="crd1-p">Since its founding in 2002, IPA has produced and tested over 550 solutions to poverty-related concerns. 
              IPA has collaborated with over 600 researchers to undertake over 830 evaluations in 51 countries since its inception.
              It has resulted in the creation of successful programs that have a global impact on millions of people.</p>
              </div>
