--- a/action.html
+++ b/action.html
@@ -82,7 +82,7 @@
 <!--End of navbar  and slideshow-->
 
 
-<h1> <center> <b> Take Actions to End Poverty..</b> </center> </h1>
+<h2 class="cont-headi">Take Actions to End Poverty</h2> 
 
 <br>
    <!--intro paragraph-->
@@ -117,13 +117,13 @@
 <br>
 
 
-<h3> <center><b> The Targets</b> </center> </h3>
+
 
 <br>
 <br>
-
+<h2 class="cont-headi">THE TARGETS</h2>
 	
-
+<br>
 		<h2 class="cont-head">Target 1.1  
 			<br>
 		  Eradicate extreme poverty </h2>
@@ -458,9 +458,12 @@ There is no defined target level of government spending for this indicator.</p>
  <br>
  <br>
 
- <h3><center><b>What we have done sofar, </b></center></h3>
+ <h2 class="cont-headi">How GROW TOGETHER contribute to achieve the targets,</h2>
 
  
+ <br>
+ <br>
+ <br>
  <br>
  <br>
  <br>
