Update some codes in to donation

--- a/donations.html
+++ b/donations.html
@@ -54,7 +54,7 @@
                 <img class="card-img" src="Images/card01.png" alt="Avatar" style="width:100%">
                 <div class="container">
                   <h4 class="card-title">AWARENESS SESSIONS</h4> 
-                  <p class="crd-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem. </p> <br> 
+                  <p class="crd-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem. </p> <br> <br><br>
                   <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Join</button>
                 </div>
             </div>
