Add some official links to contribution and finalize

--- a/contribution.html
+++ b/contribution.html
@@ -228,13 +228,13 @@
               <br>
               <br><br><br>
           <div>
-                  <img src="Images/cont/cropl.jpg" style="width:100%">
+                  <a href="http://www.businessfor2030.org/croplife" target="_blank"> <img src="Images/cont/cropl.jpg" style="width:100%"></a>
                   <hr class="hr1">
-                  <img src="Images/cont/dupon.jpg" style="width:100%">
+                  <a href="http://www.businessfor2030.org/dupont" target="_blank"> <img src="Images/cont/dupon.jpg" style="width:100%"></a>
                   <hr class="hr1">
-                  <img src="Images/cont/qualcomm.jpg" style="width:100%">
+                  <a href="http://www.businessfor2030.org/qualcomm" target="_blank"> <img src="Images/cont/qualcomm.jpg" style="width:100%"></a>
                   <hr class="hr1">
-                  <img src="Images/cont/master.jpg" style="width:100%">
+                  <a href="http://www.businessfor2030.org/mastercard" target="_blank"> <img src="Images/cont/master.jpg" style="width:100%"></a>
 
           </div>
 
