about us html update
updated button and paragraph

--- a/aboutus.html
+++ b/aboutus.html
@@ -78,118 +78,120 @@
     </script>
 
     <!--End of navbar  and slideshow-->
-    <div class="section">
-        <div class="container">
-            <div class="content-section">
-                <div class="title">
-                    <h1>What we believe</h1>
-                </div>
-                <div class="content">
-                    <h3>Say bye to poverty !</h3>
-                    <!--First paragraph starts here-->
-                    <p>Our vision is for a just and sustainable world. We are pursuing on achieving the goal ‘No
-                        Poverty’ to build
-                        a world where people and the environment are at the heart of just economies. A world free of
-                        gender-based
-                        violence and discrimination for women and girls. When the climate crisis is contained and
-                        inclusive and
-                        accountable governance structures are in place, those in positions of power can be held
-                        accountable.</p>
-                    <br><br>
-                    <!--First paragraph ends here-->
-                    <div class="button">
-                        <a href="https://www.globalgoals.org/take-action/">Read More</a>
-                    </div>
-                </div><br><br>
-                <hr><br>
+    <h1 class="cont-headi">What we believe</h1>
 
-                <div class="title">
-                    <h1>More about us</h1>
-                </div>
-                <div class="content">
-                    <h3>What is Grow Together & Who are we ? </h3>
-                    <!--Second paragraph starts here-->
-                    <p>We started our organization in 2017 based on the 1st SDG goal of the 17 SDG goals adopted by the
-                        United
-                        Nations in <b>2015</b>. We are currently working on achieving the goal by donating and
-                        volunteering and
-                        we’re
-                        focusing not only one area, we’re planning on targeting countries worldwide. We work with
-                        thousands of
-                        partners and allies across <b> 70 countries</b> to help communities develop better lives for
-                        themselves,
-                        build
-                        resilience, and protect lives and livelihoods even in times of catastrophe. We combat inequities
-                        that keep
-                        people trapped in poverty and injustice - and work for meaningful, long-term change - because we
-                        seek
-                        long-term answers.
-                    <p>
-                        <!--Second paragraph ends here-->
-                </div>
-                <br><br>
+    <h3 class="h33">Say bye to poverty !</h3>
+    <!--First paragraph starts here-->
 
-                <div class="team">
-                    <h1 class="tm"> Our strength</h1>
-                    <img class="p1" src="images/Yasitha.jpg" alt="member1">
-                    <div class="img1">
-                        <p>Yasitha Silva</p>
-                    </div>
-                    <img class="p2" src="images/Jeewaka.jpeg" alt="member2">
-                    <div class="img2">
-                        <p>Jeewaka Dias</p>
-                    </div>
-                    <img class="p3" src="images/dinithi.jpg" alt="member3">
-                    <div class="img3">
-                        <p>Dinithi Shamen</p>
-                    </div>
-                    <img class="p4" src="images/ahinsa.jpg" alt="member4">
-                    <div class="img4">
-                        <p>Ahinsa Dedunu</p>
-                    </div>
-                    <img class="p5" src="images/Michelle.jpg" alt="member5">
-                    <div class="img5">
-                        <p>Michelle Marian</p>
-                    </div>
-                    <br><br>
-                    <p class="contact">So what are you waiting for ? Hurry up and contact us for more details !</p>
-                </div><br>
+    <p class="para001">Our vision is for a just and sustainable world. We are pursuing on achieving the goal ‘No
+        Poverty’ to build
+        a world where people and the environment are at the heart of just economies. A world free of
+        gender-based
+        violence and discrimination for women and girls. When the climate crisis is contained and
+        inclusive and
+        accountable governance structures are in place, those in positions of power can be held
+        accountable.
+    </p>
+    <br>
+    <br>
+    <!--First paragraph ends here-->
+
+    <center>
+        <div class="button01">
+            <a href="https://www.globalgoals.org/take-action/">Read More</a>
+        </div>
+    </center>
+    <br><br>
+    <hr>
 
 
-                <div class="contact-info">
-                    <div class="card">
-                        <i class="card-icon far fa-envelope"></i>
-                        <p>growtogether@gmail.com</p>
-                    </div>
+    <div class="title">
+        <h1>More about us</h1>
+    </div>
+    <div class="content">
+        <h3>What is Grow Together & Who are we ? </h3>
+        <!--Second paragraph starts here-->
+        <p>We started our organization in 2017 based on the 1st SDG goal of the 17 SDG goals adopted by the
+            United
+            Nations in <b>2015</b>. We are currently working on achieving the goal by donating and
+            volunteering and
+            we’re
+            focusing not only one area, we’re planning on targeting countries worldwide. We work with
+            thousands of
+            partners and allies across <b> 70 countries</b> to help communities develop better lives for
+            themselves,
+            build
+            resilience, and protect lives and livelihoods even in times of catastrophe. We combat inequities
+            that keep
+            people trapped in poverty and injustice - and work for meaningful, long-term change - because we
+            seek
+            long-term answers.
+        <p>
+            <!--Second paragraph ends here-->
+    </div>
+    <br><br>
 
-                    <div class="card">
-                        <i class="card-icon fas fa-phone"></i>
-                        <p>+9411-123 456 789</p>
-                    </div>
+    <div class="team">
+        <h1 class="tm"> Our strength</h1>
+        <img class="p1" src="images/Yasitha.jpg" alt="member1">
+        <div class="img1">
+            <p>Yasitha Silva</p>
+        </div>
+        <img class="p2" src="images/Jeewaka.jpeg" alt="member2">
+        <div class="img2">
+            <p>Jeewaka Dias</p>
+        </div>
+        <img class="p3" src="images/dinithi.jpg" alt="member3">
+        <div class="img3">
+            <p>Dinithi Shamen</p>
+        </div>
+        <img class="p4" src="images/ahinsa.jpg" alt="member4">
+        <div class="img4">
+            <p>Ahinsa Dedunu</p>
+        </div>
+        <img class="p5" src="images/Michelle.jpg" alt="member5">
+        <div class="img5">
+            <p>Michelle Marian</p>
+        </div>
+        <br><br>
+        <p class="contact">So what are you waiting for ? Hurry up and contact us for more details !</p>
+    </div><br>
 
-                    <div class="card">
-                        <i class="card-icon fas fa-map-marker-alt"></i>
-                        <p>Colombo,Sri Lanka</p>
-                    </div>
-                </div><br>
+
+    <div class="contact-info">
+        <div class="card">
+            <i class="card-icon far fa-envelope"></i>
+            <p>growtogether@gmail.com</p>
+        </div>
+
+        <div class="card">
+            <i class="card-icon fas fa-phone"></i>
+            <p>+9411-123 456 789</p>
+        </div>
+
+        <div class="card">
+            <i class="card-icon fas fa-map-marker-alt"></i>
+            <p>Colombo,Sri Lanka</p>
+        </div>
+    </div><br>
 
 
 
-            </div>
-            <div class="container1">
-                <div class="contact-box">
-                    <div class="left"></div>
-                    <div class="right">
-                        <h2>Contact Us</h2>
-                        <input type="text" class="field" placeholder="Your Name">
-                        <input type="text" class="field" placeholder="Your Email">
-                        <input type="text" class="field" placeholder="Phone">
-                        <textarea placeholder="Message" class="field"></textarea>
-                        <button class="btn">Send</button>
-                    </div>
-                </div>
+    </div>
+    <div class="container1">
+        <div class="contact-box">
+            <div class="left"></div>
+            <div class="right">
+                <h2>Contact Us</h2>
+                <input type="text" class="field" placeholder="Your Name">
+                <input type="text" class="field" placeholder="Your Email">
+                <input type="text" class="field" placeholder="Phone">
+                <textarea placeholder="Message" class="field"></textarea>
+                <button class="btn">Send</button>
             </div>
         </div>
+    </div>
+    </div>
     </div>
     <!--Footer starts here-->
     <footer>
