update about us html
updated second paragraph

--- a/aboutus.html
+++ b/aboutus.html
@@ -104,32 +104,31 @@
     <br><br>
     <hr>
 
+    <h1 class="cont-headi">More about us</h1>
 
-    <div class="title">
-        <h1>More about us</h1>
+    <div class="space">
+            <h3 class="h33">What is Grow Together & Who are we ? </h3>
+            <!--Second paragraph starts here-->
+            <p class="para001">We started our organization in 2017 based on the 1st SDG goal of the 17 SDG goals adopted by the
+                United
+                Nations in <b>2015</b>. We are currently working on achieving the goal by donating and
+                volunteering and
+                we’re
+                focusing not only one area, we’re planning on targeting countries worldwide. We work with
+                thousands of
+                partners and allies across <b> 70 countries</b> to help communities develop better lives for
+                themselves,
+                build
+                resilience, and protect lives and livelihoods even in times of catastrophe. We combat inequities
+                that keep
+                people trapped in poverty and injustice - and work for meaningful, long-term change - because we
+                seek
+                long-term answers.
+            <p>
+                <!--Second paragraph ends here-->
     </div>
-    <div class="content">
-        <h3>What is Grow Together & Who are we ? </h3>
-        <!--Second paragraph starts here-->
-        <p>We started our organization in 2017 based on the 1st SDG goal of the 17 SDG goals adopted by the
-            United
-            Nations in <b>2015</b>. We are currently working on achieving the goal by donating and
-            volunteering and
-            we’re
-            focusing not only one area, we’re planning on targeting countries worldwide. We work with
-            thousands of
-            partners and allies across <b> 70 countries</b> to help communities develop better lives for
-            themselves,
-            build
-            resilience, and protect lives and livelihoods even in times of catastrophe. We combat inequities
-            that keep
-            people trapped in poverty and injustice - and work for meaningful, long-term change - because we
-            seek
-            long-term answers.
-        <p>
-            <!--Second paragraph ends here-->
-    </div>
-    <br><br>
+    
+        <br><br>
 
     <div class="team">
         <h1 class="tm"> Our strength</h1>
