updated about us html
updated contact us box

--- a/aboutus.html
+++ b/aboutus.html
@@ -209,21 +209,20 @@
 
 
     </div>
-    <div class="container1">
-        <div class="contact-box">
-            <div class="left"></div>
-            <div class="right">
-                <h2>Contact Us</h2>
+    <p class="cont-headi">So what are you waiting for ? Hurry up and contact us for more details !</p>
+	<br><br>
+    <div class="contact-box">
+        <div class="left"></div>
+         <div class="right">
+            <h2>Contact Us</h2>
                 <input type="text" class="field" placeholder="Your Name">
                 <input type="text" class="field" placeholder="Your Email">
                 <input type="text" class="field" placeholder="Phone">
                 <textarea placeholder="Message" class="field"></textarea>
                 <button class="btn">Send</button>
-            </div>
-        </div>
-    </div>
-    </div>
-    </div>
+         </div>
+		 
+    </div>>
     <!--Footer starts here-->
     <footer>
         <div class="footer-content">
