--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		
 		<img class="navimg"src="images/navimage.png" >
 		<a href="aboutus.html">ABOUT</a>
-		<a href="Contribution.html">CONTRIBUTION</a>
+		<a href="contribution.html">CONTRIBUTION</a>
 		<a href="action.html">ACTION</a>
 		<a href="donations.html">DONATE</a>
 		<a href="volunteer.html">VOLUNTEER</a>
